# Copyright (c) 2016, Google Inc.
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH
# REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY
# AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
# INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
# LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR
# OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
# PERFORMANCE OF THIS SOFTWARE.

source_set("lib") {
  sources = [
    "command_buffer.cc",
    "command_buffer.h",
    "line_tracker.cc",
    "line_tracker.h",
    "macros.h",
    "scoped_fd.cc",
    "scoped_fd.h",
    "string_view.cc",
    "string_view.h",
    "term.cc",
    "term.h",
    "text_buffer.cc",
    "text_buffer.h",
    "text_span.cc",
    "text_span.h",
    "text_span_queue.h",
    "vector_extensions.h",
    "viewport.cc",
    "viewport.h",
  ]
}

executable("zi") {
  sources = [
    "zi.cc",
  ]

  deps = [
    ":lib",
  ]
}

executable("zi_unittests") {
  sources = [
    "//third_party/gtest/src/gtest_main.cc",
    "text_buffer_unittest.cc",
  ]

  deps = [
    ":lib",
    "//third_party/gtest",
  ]
}
