# Copyright (c) 2016, Google Inc.
#
# Permission to use, copy, modify, and/or distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH
# REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY
# AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT,
# INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM
# LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR
# OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
# PERFORMANCE OF THIS SOFTWARE.

executable("zi") {
  sources = [
    "zi.cc",
  ]

  deps = [
    "//editing",
    "//files",
    "//terminal",
    "//text",
    "//zen",
  ]
}

executable("zi_unittests") {
  sources = [
    "//third_party/gtest/src/gtest_main.cc",
    "editing/line_tracker_unittest.cc",
    "text/string_view_unittest.cc",
    "text/text_buffer_unittest.cc",
    "text/text_range_queue_unittest.cc",
    "text/text_range_unittest.cc",
    "text/text_view_unittest.cc",
  ]

  deps = [
    "//editing",
    "//text",
    "//third_party/gtest",
  ]
}
